# bril-lsp

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yaml
bril-frontend/: Cargo.toml  README.md
bril-frontend/bril-programs/core_benchmarks_copied/: ackermann.out  armstrong.out  binary-fmt.out  birthday.out  bitshift.out  bitwise-ops.out  catalan.out  check-primes.out  collatz.out  digital-root.out  euclid.out  fact.out  factors.out  fitsinside.out  fizz-buzz.out  gcd.out  hanoi.out  is-decreasing.out  lcm.out  loopfact.out  mod_inv.out  orders.out  palindrome.out  pascals-row.out  perfect.out  primes-between.out  pythagorean_triple.out  quadratic.out  recfact.out  rectangles-area-difference.out  relative-primes.out  reverse.out  sum-bits.out  sum-check.out  sum-divisors.out  sum-sq-diff.out  totient.out  up-arrow.out
bril-frontend/examples/: print.rs  print_types.rs
bril-frontend/src/: ast.rs  infer_types.rs  lexer.rs  lib.rs  loc.rs  parser.rs  printer.rs
bril-frontend/tests/: infer_types.rs  lexer.rs  parser.rs
bril-frontend/tests/check-lossless/: Cargo.toml
bril-frontend/tests/check-lossless/src/: main.rs
bril-frontend/tests/snapshots/: lexer__add_bril_lexes.snap  lexer__all_tokens_work.snap  lexer__import_bril_lexes.snap  lexer__simple_bril_lexes.snap
bril-lsp/: Cargo.toml  add.bril
bril-lsp/src/: main.rs
bril-vscode/: README.md  package.json
bril-vscode/src/: extension.ts
brilfmt/: Cargo.toml  check_idempotency.py
brilfmt/src/: main.rs
src/: lib.rs
tests/check-lossless/src/: main.rs
