[package]
name = "bril-frontend"
description = "AST and type-checking for Bril programs"
version = "0.2.1"
edition.workspace = true
license.workspace = true

[dependencies]
logos.workspace = true
inform.workspace = true

[dev-dependencies]
annotate-snippets.workspace = true
insta.workspace = true
snafu.workspace = true
