[package]
name = "bril-frontend"
description = "AST and type-checking for Bril programs"
version = "0.3.0"
edition.workspace = true
license = "MPL-2.0"
readme = "README.md"

[dependencies]
logos.workspace = true
inform.workspace = true

[dev-dependencies]
annotate-snippets.workspace = true
insta.workspace = true
snafu.workspace = true
